--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "supabase": "^2.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
